include/maplibre_native_c/camera.h


MLN_API mln_camera_options mln_camera_options_default(void) MLN_NOEXCEPT;
MLN_API mln_animation_options mln_animation_options_default(void) MLN_NOEXCEPT;
MLN_API mln_camera_fit_options
mln_camera_fit_options_default(void) MLN_NOEXCEPT;
MLN_API mln_bound_options mln_bound_options_default(void) MLN_NOEXCEPT;
MLN_API mln_free_camera_options
mln_free_camera_options_default(void) MLN_NOEXCEPT;
MLN_API mln_projection_mode mln_projection_mode_default(void) MLN_NOEXCEPT;
MLN_API mln_map_viewport_options
mln_map_viewport_options_default(void) MLN_NOEXCEPT;
MLN_API mln_map_tile_options mln_map_tile_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_debug_options(mln_map map, uint32_t options) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_get_debug_options(mln_map map, uint32_t* out_options) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_rendering_stats_view_enabled(
  mln_map map, bool enabled
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_rendering_stats_view_enabled(
  mln_map map, bool* out_enabled
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_is_fully_loaded(mln_map map, bool* out_loaded) MLN_NOEXCEPT;
MLN_API mln_status mln_map_dump_debug_logs(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_viewport_options(
  mln_map map, mln_map_viewport_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_viewport_options(
  mln_map map, const mln_map_viewport_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_tile_options(
  mln_map map, mln_map_tile_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_tile_options(
  mln_map map, const mln_map_tile_options* options
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_get_camera(mln_map map, mln_camera_options* out_camera) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_jump_to(mln_map map, const mln_camera_options* camera) MLN_NOEXCEPT;
MLN_API mln_status mln_map_ease_to(
  mln_map map, const mln_camera_options* camera,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_fly_to(
  mln_map map, const mln_camera_options* camera,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_move_by(mln_map map, double delta_x, double delta_y) MLN_NOEXCEPT;
MLN_API mln_status mln_map_move_by_animated(
  mln_map map, double delta_x, double delta_y,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_scale_by(
  mln_map map, double scale, const mln_screen_point* anchor
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_scale_by_animated(
  mln_map map, double scale, const mln_screen_point* anchor,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_rotate_by(
  mln_map map, mln_screen_point first, mln_screen_point second
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_rotate_by_animated(
  mln_map map, mln_screen_point first, mln_screen_point second,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pitch_by(mln_map map, double pitch) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pitch_by_animated(
  mln_map map, double pitch, const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_cancel_transitions(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_camera_for_lat_lng_bounds(
  mln_map map, mln_lat_lng_bounds bounds,
  const mln_camera_fit_options* fit_options, mln_camera_options* out_camera
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_camera_for_lat_lngs(
  mln_map map, const mln_lat_lng* coordinates, size_t coordinate_count,
  const mln_camera_fit_options* fit_options, mln_camera_options* out_camera
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_camera_for_geometry(
  mln_map map, mln_buffer_view geometry,
  const mln_camera_fit_options* fit_options, mln_camera_options* out_camera
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_lat_lng_bounds_for_camera(
  mln_map map, const mln_camera_options* camera, mln_lat_lng_bounds* out_bounds
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_lat_lng_bounds_for_camera_unwrapped(
  mln_map map, const mln_camera_options* camera, mln_lat_lng_bounds* out_bounds
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_get_bounds(mln_map map, mln_bound_options* out_options) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_bounds(mln_map map, const mln_bound_options* options) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_free_camera_options(
  mln_map map, mln_free_camera_options* out_options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_free_camera_options(
  mln_map map, const mln_free_camera_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_projection_mode(
  mln_map map, mln_projection_mode* out_mode
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_projection_mode(
  mln_map map, const mln_projection_mode* mode
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pixel_for_lat_lng(
  mln_map map, mln_lat_lng coordinate, mln_screen_point* out_point
) MLN_NOEXCEPT;